Remove demo seed content and simplify UI

--- a/client/access.html
+++ b/client/access.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Manage Access</p>
-          <h1>Control permissions with clarity and confidence.</h1>
+          <h1>Access management</h1>
           <p class="subheading">
-            Keep access decisions focused, auditable, and easy to adjust.
+            Review and update calendar permissions.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/roles">Review roles</a>
             <a class="secondary" href="/audit">Check audit history</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Permissions Overview</div>
-          <div class="hero-card__metric">Granular access table</div>
-          <p class="hero-card__detail">Scan who can view, comment, or manage at a glance.</p>
-          <div class="hero-card__badges">
-            <span>View</span>
-            <span>Comment</span>
-            <span>Manage</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Manage Access</h2>
-          <p>Kind boundaries with clear permissions for every calendar.</p>
+          <p>Permissions overview.</p>
         </div>
         <div class="card" id="access-matrix"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
