--- a/client/audit.html
+++ b/client/audit.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Audit History</p>
-          <h1>Track every change with a clear audit trail.</h1>
+          <h1>Audit history</h1>
           <p class="subheading">
-            Audit focus keeps history, accountability, and decisions in one readable timeline.
+            Review activity and changes.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/access">Review permissions</a>
             <a class="secondary" href="/sharing">Open sharing tools</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Audit Snapshot</div>
-          <div class="hero-card__metric">Latest activity feed</div>
-          <p class="hero-card__detail">Spot who changed what and when, without hunting through menus.</p>
-          <div class="hero-card__badges">
-            <span>Traceable</span>
-            <span>Readable</span>
-            <span>Secure</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Audit History</h2>
-          <p>Beautiful, readable histories of every calendar decision.</p>
+          <p>Activity timeline.</p>
         </div>
         <div class="card" id="audit-history"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
