--- a/client/dashboards.html
+++ b/client/dashboards.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Dashboards</p>
-          <h1>See personal and organization momentum at a glance.</h1>
+          <h1>Dashboards</h1>
           <p class="subheading">
-            Dashboard focus gives you the pulse without a flood of widgets or distractions.
+            Review account and organization status.
           </p>
           <div class="hero-actions">
-            <a class="primary" href="/calendar">Open calendar focus</a>
+            <a class="primary" href="/calendar">Open calendar</a>
             <a class="secondary" href="/profiles">Review profile space</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Dashboard Pulse</div>
-          <div class="hero-card__metric">2 aligned views</div>
-          <p class="hero-card__detail">Personal focus and organization health side by side.</p>
-          <div class="hero-card__badges">
-            <span>Highlights</span>
-            <span>Teams</span>
-            <span>Signals</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Dashboards</h2>
-          <p>Quick vibes for you and the crew without endless scrolling.</p>
+          <p>Monitor key activity.</p>
         </div>
         <div class="grid two">
           <div class="card" id="user-dashboard"></div>
@@ -72,12 +62,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -121,8 +111,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
