--- a/client/developer.html
+++ b/client/developer.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Developer Portal</p>
-          <h1>Everything you need to build with Tylendar.</h1>
+          <h1>Developer portal</h1>
           <p class="subheading">
-            Keep API specs, embed tools, and integration notes in one focused place.
+            Integration resources and documentation.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/embed">Open embed widget</a>
             <a class="secondary" href="/observability">Review observability</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Developer Hub</div>
-          <div class="hero-card__metric">API + integration guides</div>
-          <p class="hero-card__detail">Ship integrations with clear docs and status updates.</p>
-          <div class="hero-card__badges">
-            <span>Specs</span>
-            <span>Webhooks</span>
-            <span>SDKs</span>
           </div>
         </div>
       </section>
@@ -59,8 +49,8 @@
     <main class="page-content">
       <section class="section">
         <div class="section-heading">
-          <h2>API Documentation & Developer Portal</h2>
-          <p>Specs, webhooks, and embed toolkits in one hub.</p>
+          <h2>Developer Resources</h2>
+          <p>Documentation and integration status.</p>
         </div>
         <div class="card" id="developer-portal"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
