--- a/client/messageboard.html
+++ b/client/messageboard.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">MessageBoard</p>
-          <h1>Keep event conversations warm and organized.</h1>
+          <h1>Event message board</h1>
           <p class="subheading">
-            Dedicated MessageBoard focus keeps updates, replies, and context together.
+            Review discussions tied to events.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/calendar">Return to the calendar</a>
             <a class="secondary" href="/sharing">Share updates</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Conversation Flow</div>
-          <div class="hero-card__metric">Threaded event updates</div>
-          <p class="hero-card__detail">Follow every detail without losing the schedule.</p>
-          <div class="hero-card__badges">
-            <span>Replies</span>
-            <span>Mentions</span>
-            <span>Context</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Event MessageBoard</h2>
-          <p>Chat, cheer, and keep conversations next to the moments.</p>
+          <p>Conversation history.</p>
         </div>
         <div class="card" id="message-board"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
