--- a/client/profiles.html
+++ b/client/profiles.html
@@ -33,24 +33,14 @@
       </nav>
       <section class="hero-banner">
         <div>
-          <p class="eyebrow">Profile & Presence</p>
-          <h1>Stay centered on your personal rhythm.</h1>
+          <p class="eyebrow">Profile</p>
+          <h1>Account profile</h1>
           <p class="subheading">
-            Profiles highlight your status, notifications, and focus preferences without distractions.
+            Review and update your account details.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/dashboards">View dashboards</a>
-            <a class="secondary" href="/calendar">Open calendar focus</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Presence Snapshot</div>
-          <div class="hero-card__metric">1 unified identity</div>
-          <p class="hero-card__detail">Keep your availability, title, and updates in one place.</p>
-          <div class="hero-card__badges">
-            <span>Status</span>
-            <span>Notifications</span>
-            <span>Activity</span>
+            <a class="secondary" href="/calendar">Open calendar</a>
           </div>
         </div>
       </section>
@@ -59,8 +49,8 @@
     <main class="page-content">
       <section class="section">
         <div class="section-heading">
-          <h2>User Management & Profile</h2>
-          <p>Personal profiles, gentle reminders, and your social rhythm.</p>
+          <h2>User profile</h2>
+          <p>Account details and status.</p>
         </div>
         <div class="grid two">
           <div class="card" id="profile-card"></div>
@@ -72,12 +62,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -121,8 +111,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
