--- a/client/roles.html
+++ b/client/roles.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Roles & Permissions</p>
-          <h1>Assign responsibilities with clarity and flexibility.</h1>
+          <h1>Role management</h1>
           <p class="subheading">
-            Manage roles, permissions, and ownership without crowding the rest of the UI.
+            Define roles and assignments.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/access">Open access matrix</a>
             <a class="secondary" href="/audit">Review audit trail</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Role Coverage</div>
-          <div class="hero-card__metric">Assignments in one view</div>
-          <p class="hero-card__detail">Match people to permissions with confidence.</p>
-          <div class="hero-card__badges">
-            <span>Owners</span>
-            <span>Managers</span>
-            <span>Members</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Role & Permission Management</h2>
-          <p>Define roles, assign owners, and keep permissions current.</p>
+          <p>Roles and assignments.</p>
         </div>
         <div class="card" id="role-management"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
