--- a/client/embed.html
+++ b/client/embed.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Embed Widget</p>
-          <h1>Bring your calendar anywhere with a focused embed.</h1>
+          <h1>Embed widget</h1>
           <p class="subheading">
-            Share consistent, secure calendar previews across your digital spaces.
+            Manage calendar embeds for external surfaces.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/developer">Visit developer portal</a>
             <a class="secondary" href="/sharing">Explore sharing tools</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Embed Ready</div>
-          <div class="hero-card__metric">One snippet to launch</div>
-          <p class="hero-card__detail">Connect schedules to websites, portals, and community hubs.</p>
-          <div class="hero-card__badges">
-            <span>Portable</span>
-            <span>Secure</span>
-            <span>Fast</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Calendar Embed Widget</h2>
-          <p>Portable calendar previews that call the core API.</p>
+          <p>Embed configuration.</p>
         </div>
         <div class="card" id="embed-widget"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
