--- a/client/observability.html
+++ b/client/observability.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Observability</p>
-          <h1>Keep uptime, latency, and alerts in one view.</h1>
+          <h1>Observability</h1>
           <p class="subheading">
-            Dedicated observability space keeps metrics and alerts visible without distraction.
+            Monitoring and alerting overview.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/resilience">Check resilience</a>
             <a class="secondary" href="/developer">Developer portal</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Operational Focus</div>
-          <div class="hero-card__metric">Live status signals</div>
-          <p class="hero-card__detail">Stay ahead of issues with crisp, actionable updates.</p>
-          <div class="hero-card__badges">
-            <span>Metrics</span>
-            <span>Alerts</span>
-            <span>Health</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Observability & Alerts</h2>
-          <p>Operational dashboards and proactive alerting.</p>
+          <p>Metrics and alerts.</p>
         </div>
         <div class="grid two">
           <div class="card" id="observability"></div>
@@ -72,12 +62,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -121,8 +111,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
