--- a/client/resilience.html
+++ b/client/resilience.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Fault Tolerance</p>
-          <h1>Reliability patterns in one focused workspace.</h1>
+          <h1>Fault tolerance</h1>
           <p class="subheading">
-            Monitor retries, circuit breakers, and fallbacks without leaving the flow.
+            Review resilience status and recovery behavior.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/observability">Open observability</a>
             <a class="secondary" href="/developer">Visit developer portal</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Resilience Snapshot</div>
-          <div class="hero-card__metric">Graceful recovery states</div>
-          <p class="hero-card__detail">Understand fault readiness across the platform.</p>
-          <div class="hero-card__badges">
-            <span>Retries</span>
-            <span>Fallbacks</span>
-            <span>Recovery</span>
           </div>
         </div>
       </section>
@@ -60,7 +50,7 @@
       <section class="section">
         <div class="section-heading">
           <h2>Fault Tolerance</h2>
-          <p>Retries, circuit breakers, and graceful fallbacks.</p>
+          <p>Resilience status.</p>
         </div>
         <div class="card" id="fault-tolerance"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
