--- a/client/sharing.html
+++ b/client/sharing.html
@@ -34,23 +34,13 @@
       <section class="hero-banner">
         <div>
           <p class="eyebrow">Sharing & Export</p>
-          <h1>Share schedules with confidence and precision.</h1>
+          <h1>Sharing & export</h1>
           <p class="subheading">
-            Dedicated sharing tools keep time zones, links, and exports perfectly aligned.
+            Share calendars or export data.
           </p>
           <div class="hero-actions">
             <a class="primary" href="/embed">Use the embed widget</a>
             <a class="secondary" href="/audit">Review audit history</a>
-          </div>
-        </div>
-        <div class="hero-card">
-          <div class="hero-card__title">Share Ready</div>
-          <div class="hero-card__metric">3 export paths</div>
-          <p class="hero-card__detail">Send links, export files, or sync external calendars.</p>
-          <div class="hero-card__badges">
-            <span>Links</span>
-            <span>Exports</span>
-            <span>Time zones</span>
           </div>
         </div>
       </section>
@@ -59,8 +49,8 @@
     <main class="page-content">
       <section class="section">
         <div class="section-heading">
-          <h2>Social Sharing & Export</h2>
-          <p>Share links and export formats that keep time zones intact.</p>
+          <h2>Sharing</h2>
+          <p>Share links and exports.</p>
         </div>
         <div class="card" id="sharing-options"></div>
       </section>
@@ -69,12 +59,12 @@
     <footer class="footer">
       <div>
         <strong>Tylendar</strong>
-        <p>Social scheduling that feels warm, welcoming, and easy.</p>
+        <p>Production calendar system.</p>
       </div>
       <div class="footer-links">
-        <a href="#">Safety</a>
-        <a href="#">Community</a>
-        <a href="#">Help</a>
+        <a href="#">Status</a>
+        <a href="#">Privacy</a>
+        <a href="#">Support</a>
       </div>
     </footer>
 
@@ -118,8 +108,8 @@
             </label>
             <label class="auth-field">
               <span>Organization ID</span>
-              <input type="text" name="organizationId" placeholder="org-1 (optional)" />
-              <small>Optional. Leave blank or use <strong>org-1</strong> for the community space.</small>
+              <input type="text" name="organizationId" placeholder="Organization ID (optional)" />
+              <small>Optional. Leave blank if you are not joining an existing organization.</small>
             </label>
             <label class="auth-field">
               <span>Role</span>
