--- a/client/sharing.html
+++ b/client/sharing.html
@@ -54,6 +54,46 @@
         </div>
         <div class="card" id="sharing-options"></div>
       </section>
+
+      <section class="section">
+        <div class="section-heading">
+          <h2>Generate share links</h2>
+          <p>Create permissioned links with tokenized access.</p>
+        </div>
+        <div class="card">
+          <form class="form" data-share-link>
+            <label class="form-field">
+              <span>Calendar ID</span>
+              <input type="text" name="calendarId" required />
+            </label>
+            <fieldset class="form-fieldset">
+              <legend>Permissions</legend>
+              <label class="form-checkbox">
+                <input type="checkbox" name="permissions" value="View Calendar" />
+                <span>View Calendar</span>
+              </label>
+              <label class="form-checkbox">
+                <input type="checkbox" name="permissions" value="View Calendar - Times Only" />
+                <span>View Calendar - Times Only</span>
+              </label>
+              <label class="form-checkbox">
+                <input type="checkbox" name="permissions" value="Add to Calendar" />
+                <span>Add to Calendar</span>
+              </label>
+              <label class="form-checkbox">
+                <input type="checkbox" name="permissions" value="Comment on Calendar" />
+                <span>Comment on Calendar</span>
+              </label>
+              <label class="form-checkbox">
+                <input type="checkbox" name="permissions" value="Manage Calendar" />
+                <span>Manage Calendar</span>
+              </label>
+            </fieldset>
+            <button class="primary" type="submit">Generate link</button>
+            <div class="form-feedback is-hidden" data-form-feedback></div>
+          </form>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
